--- a/kitty.conf
+++ b/kitty.conf
@@ -23,13 +23,13 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
- font_size 12.0
+ font_size 13.0
 
 #: Font size (in pts)
 
 # force_ltr no
 
-#: kitty does not support BIDI (bidirectional text), however, for RTL
+#: kitty does not support BIDI (bidirectional text), however, for RTL{{{
 #: scripts, words are automatically displayed in RTL. That is to say,
 #: in an RTL script, the words "HELLO WORLD" display in kitty as
 #: "WORLD HELLO", and if you try to select a substring of an RTL-
@@ -44,7 +44,7 @@
 #: line program GNU FriBidi
 #: <https://github.com/fribidi/fribidi#executable> to get BIDI
 #: support, because it will force kitty to always treat the text as
-#: LTR, which FriBidi expects for terminals.
+#: LTR, which FriBidi expects for terminals.}}}
 
 # adjust_line_height  0
 # adjust_column_width 0
@@ -629,7 +629,7 @@
 
 #: }}}
 
-#: Tab bar {{{
+#: Tab bar
 
  tab_bar_edge bottom
 
@@ -646,7 +646,7 @@
 #: the second number is the margin between the tab bar and the
 #: contents of the current tab.
 
- tab_bar_style fade
+ tab_bar_style powerline
 
 #: The tab bar style, can be one of: fade, separator, powerline, or
 #: hidden. In the fade style, each tab's edges fade into the
@@ -669,7 +669,7 @@
 #: closed tab. A value of right will switch to the tab to the right of
 #: the closed tab. A value of last will switch to the right-most tab.
 
- tab_fade 0.25 0.5 0.75 1
+# tab_fade 0.25 0.5 0.75 1
 
 #: Control how each tab fades into the background when using fade for
 #: the tab_bar_style. Each number is an alpha (between zero and one)
@@ -694,7 +694,7 @@
 #: Some text or a unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has some activity.
 
-# tab_title_template "{title}"
+ tab_title_template "{index}: {title}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -715,12 +715,12 @@
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
 
-# active_tab_foreground   #000
-# active_tab_background   #eee
-# active_tab_font_style   bold-italic
-# inactive_tab_foreground #444
-# inactive_tab_background #999
-# inactive_tab_font_style normal
+ active_tab_foreground   #000
+ active_tab_background   #eee
+ active_tab_font_style   bold-italic
+ inactive_tab_foreground #444
+ inactive_tab_background #999
+ inactive_tab_font_style normal
 
 #: Tab bar colors and styles
 
@@ -729,7 +729,7 @@
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
 
-#: }}}
+#:
 
 #: Color scheme {{{
 
