--- a/kitty.conf
+++ b/kitty.conf
@@ -1,4 +1,4 @@
- vim:fileencoding=utf-8:ft=conf:foldmethod=marker
+ # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
 #: Fonts
 
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
- font_family      Hack Nerd Font Regular
- bold_font        Hack Nerd Font Bold
- italic_font      auto
- bold_italic_font Hack Nerd Font Bold Italic
+ font_family      FantasqueSans Nerd Font Mono Regular
+ bold_font        FantasqueSans Nerd Font Mono Bold 
+ italic_font      FantasqueSans Nerd Font Mono 
+ bold_italic_font FantasqueSans Nerd Font Mono Bold Italic 
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
